# yoru

./: .gitignore  LICENSE  LICENSING.md  Makefile  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .env.template  DEPLOY-FLY.md  Dockerfile  README.md  fly.toml  pyproject.toml
backend/apps/api/: README.md  main.py  main_saasforge.py.bak
backend/apps/api/core/: logging.py  max_body_size.py  request_id.py  request_logging.py  sentry.py
backend/apps/api/tests/: README.md  __init__.py  test_billing_checkout.py  test_billing_webhook.py  test_body_size_cap.py  test_cors.py  test_health.py  test_health_ready_depth.py  test_metrics.py  test_ops.py  (+5 more)
backend/docker/.cursor/: infra.banned.mdc  infra.cicd.mdc  scale.resilience.mdc
backend/docker/compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/docker/config/: .gitignore
backend/docs/: DEPLOYMENT.md  SUPABASE_OPTIMIZATION_GUIDE.md
backend/libs/email/: .env.example  README.md  __init__.py  config.py  email_manager.py  exceptions.py  test_manual.py
backend/libs/log_manager/: README.md  __init__.py  controller.py
backend/libs/redis/: README.md  __init__.py  cache.py  redis.py  test_cache_manual.py
backend/libs/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py
backend/libs/shutdown/: __init__.py  manager.py
backend/libs/supabase/: README.md  supabase.py
backend/libs/tracing/: __init__.py  tracer.py
backend/migrations/: harden_rls_for_service_role_backend.sql  invitations_schema.sql  notifications_schema.sql  organizations_schema.sql  performance_optimization_views.sql  rate_limit_feature.sql  route_rules_schema.sql  sales_leads_schema.sql  sessions_is_public.sql  subscriptions_schema.sql  user_groups_schema.sql  webhooks_schema.sql  welcome_email_sent_at.sql
backend/requirements/: api.txt  base.txt
backend/scripts/: README.md  analyze_n_plus_one.py  apply_migration.sh  create_view.py  deploy-production.sh  seed_subscriptions.py  setup-server-security.sh
backend/tmp/: cors-smoke.db
(+323 files in other folders)
